--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -8,10 +8,8 @@
   margin: 3% 0;
   border-radius: 2%;
   box-shadow: 1px 2px 5px 2px grey;
-
   .vidTopBar{
     display: flex;
-
     .vidChanIcon {
       border-radius: 50%;
       width: 15%; 
@@ -23,6 +21,7 @@
       align-self: center;
       font-size: 1.3rem;
       font-weight: bold;
+      padding-left: 5%;
     }
   }
  
